[gd_scene load_steps=5 format=3 uid="uid://byv6mwfcljgrl"]

[ext_resource type="Script" path="res://src/main/common/classes/base_weapons/sword.gd" id="1_xbmnq"]
[ext_resource type="Script" path="res://src/main/common/classes/HitBox.gd" id="2_nsfps"]
[ext_resource type="Script" path="res://src/main/common/classes/StateMachine.gd" id="3_4148g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_adaij"]

[node name="Sword" type="Node2D"]
z_index = 100
script = ExtResource("1_xbmnq")

[node name="Graphics" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Graphics"]

[node name="HitBox" type="Area2D" parent="Graphics"]
collision_layer = 0
collision_mask = 16
script = ExtResource("2_nsfps")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graphics/HitBox"]
debug_color = Color(0.917647, 0, 0.705882, 0.419608)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_adaij")

[node name="AttackWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_4148g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
